--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
 .header {
     height: 300px;
     width: 100%;
-    background-image: url(/images/background01.jpg);
+    background-image: url(../images/background01.jpg);
     background-size: cover;
     position: relative;
 }
@@ -34,7 +34,7 @@
 .middle {
     height: 2000px;
     width: 100%;
-    background-image: url(/images/1111.png);
+    background-image: url(../images/1111.png);
     margin-top: 5px;
     position: relative;
 }
